# server

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.codex/agents/: backend-reviewer.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 537c0d8fc9bb_expand_auth_schema.py  760acf37dec0_create_users_table.py  89143b2dc5b3_add_powersync_demo_items.py  a1d7c2f4e8b9_add_powersync_domain_tables.py  c3f8b2a9d1e4_add_media_assets.py
docs/: auth-testing.md  flutter-auth-integration.md  powersync-sandbox.md
docs/plans/: 2026-03-03-project-structure-improvements-design.md  2026-03-03-project-structure-improvements.md  2026-03-05-automated-test-db-setup-design.md  2026-03-05-automated-test-db-setup.md
frontend/dev-pages/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
papyrus/: config.py  main.py
papyrus/api/: deps.py
papyrus/core/: database.py  dev_pages.py  exceptions.py  rate_limit.py  security.py
papyrus/models/: __init__.py  auth.py  media.py  powersync_demo.py  sync.py  user.py
papyrus/schemas/: auth.py  book.py  media.py  powersync_demo.py  progress.py  storage.py  sync.py  user.py
papyrus/services/: auth.py  email.py  media.py  powersync_demo.py  sync.py  users.py
powersync/: service.yaml  sync-config.yaml
scripts/: bootstrap_local.sh  generate_dev_powersync_keys.sh  setup_local_powersync.sh
tests/: conftest.py  factories.py  test_config.py  test_database.py  test_entrypoint.py  test_env_files.py  test_models.py
tests/core/: test_security.py
tests/integration/: test_auth_smoke.py
tests/services/: test_auth.py  test_powersync_demo.py  test_sync.py  test_users.py
(+59 files in other folders)
